Closed
Bug 402427
Opened 18 years ago
Closed 18 years ago
Wrong shaping when visual text type is used in input field
Categories
(Core :: Graphics, defect, P3)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: smontagu)
References
(Blocks 1 open bug)
Details
(Keywords: regression, testcase)
Attachments
(1 file)
|
8.92 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bug #258099 has regressed.
See the testcase in attachment 235766 [details]. The Arabic text should appear as موزيلا in all cases.
Flags: blocking1.9?
Updated•18 years ago
|
Keywords: regression,
testcase
| Assignee | ||
Comment 1•18 years ago
|
||
WFM on Mac and Windows, apparently a Linux-only regression.
Hardware: All → PC
You're going to fix this right? :-)
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → smontagu
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
Updated•18 years ago
|
Priority: -- → P3
| Assignee | ||
Comment 3•18 years ago
|
||
This brings back the bidi overrides removed in bug 362682.
Attachment #287652 -
Flags: superreview?(roc)
Attachment #287652 -
Flags: review?(roc)
| Assignee | ||
Comment 4•18 years ago
|
||
With attachment 287652 [details] [diff] [review] the shaping is mostly correct, but there is one remaining issue: when there is an ltr directional override lam alef are shaped as individual connected characters, not as a lam-alef ligature. I think this may be a bug in the Pango shaper.
Comment 5•18 years ago
|
||
Yeah, it's a pango bug. One that is not trivial to fix, but I opened a bug upstream for it anyway: http://bugzilla.gnome.org/show_bug.cgi?id=494486
How are the text offsets being adjusted in this patch? Surely the mapping between glyphs and characters needs to be changed to account for the header?
| Assignee | ||
Comment 7•18 years ago
|
||
The last hunk in the patch does that.
I don't see how. For an item which starts after the header, we don't change anything.
| Assignee | ||
Comment 9•18 years ago
|
||
So how were the text offsets adjusted before bug 362682?
Comment on attachment 287652 [details] [diff] [review]
Bring back bidi overrides
Never mind, I get it now.
The key is we don't really care what the offset in the UTF8 string is. It's the UTF16 offset that the textrun cares about, and that's tracked separately and is not affected by the header.
Attachment #287652 -
Flags: superreview?(roc)
Attachment #287652 -
Flags: superreview+
Attachment #287652 -
Flags: review?(roc)
Attachment #287652 -
Flags: review+
| Assignee | ||
Comment 11•18 years ago
|
||
Checked in. I don't think that the Linux test boxes have the necessary fonts for Arabic reftests, but I can't be sure until bug 403012 is fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•