Go back to adding bidi overrides to text-runs. Prevents assertions and a regression in shaping LTR Arabic. Bug 402427, r+sr=roc, blocking1.9=pavlov